syntax = "proto3";
package account;

service User {
    rpc getUser (GetUser.Request) returns (GetUser.Response);
}

message Contact {
    string type = 1;
    string address = 2;
}

message UserProfileData {
    string user_id = 1;
    string name = 2;
    repeated string skills = 3;
    repeated Contact contacts = 4;
    string created_at = 5;
    string updated_at = 6;
}

message GetUser {
    message Payload {
        string user_id = 1;
    }

    message Request {
        Payload payload = 1;
    }

    message Response {
        UserProfileData user = 1;
    }
}
